--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,7 +10,7 @@
     />
     <link href="../css/output.css" rel="stylesheet" />
     <link href="../css/style.css" rel="stylesheet" />
-    <link rel="icon" href="../assets/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href=".../assets/favicon.svg" type="image/svg+xml" />
     <title>Logistics</title>
   </head>
   <body>
@@ -19,29 +19,88 @@
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
-        <a href="/">
+        <a href="/index.html">
           <img
-            src="./assets/icons/logo.svg"
+            src="../assets/icons/logo.svg"
             alt="logo"
             class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
           />
         </a>
         <div class="flex gap-6 max-[1440px]:hidden">
-          <a href="./cargo_transportation.html" class="flex items-center gap-1">
-            <p class="text-white font-medium text-xl">Грузоперевозки</p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" />
-          </a>
-          <a href="./road_transportation.html" class="flex items-center gap-1">
-            <p class="header_title">Автоперевозки</p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" />
-          </a>
+          <div class="dropdown">
+            <button
+              class="flex items-center gap-1 dropdown-trigger"
+              type="button"
+            >
+              <p class="text-white font-medium text-xl">Грузоперевозки</p>
+              <img src="../assets/icons/chevron.svg" alt="chevron" />
+            </button>
+            <div class="dropdown-menu">
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки фурами</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 1.5 тонны</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 3 тонны</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 5 тонн</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 10 тонн</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 20 тонн</a
+              >
+            </div>
+          </div>
+          <div class="dropdown">
+            <button
+              class="flex items-center gap-1 dropdown-trigger"
+              type="button"
+            >
+              <p class="header_title">Автоперевозки</p>
+              <img src="../assets/icons/chevron.svg" alt="chevron" />
+            </button>
+            <div class="dropdown-menu">
+              <a
+                href="./road_transportation.html"
+                class="text-white font-medium text-xl"
+                >Международные перевозки</a
+              >
+              <a
+                href="./road_transportation.html"
+                class="text-white font-medium text-xl"
+                >Междугородние перевозки</a
+              >
+              <a
+                href="./road_transportation.html"
+                class="text-white font-medium text-xl"
+                >Перевозка негабаритных грузов</a
+              >
+            </div>
+          </div>
           <p class="header_title">Расчет стоимости</p>
           <a href="./pricelist.html" class="header_title">Прайс-лист</a>
         </div>
       </div>
       <div class="gap-2 flex">
         <div class="header_icon_wrap max-[768px]:hidden!">
-          <img src="./assets/icons/phone.svg" alt="phone" />
+          <img src="../assets/icons/phone.svg" alt="phone" />
         </div>
         <button
           class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
@@ -52,7 +111,7 @@
           class="header_icon_wrap gap-2.5 w-30! hidden! max-[1440px]:flex! max-[768px]:h-10! max-[768px]:23! burger-menu"
           id="burgerBtn"
         >
-          <img src="./assets/icons/menu.svg" alt="menu" />
+          <img src="../assets/icons/menu.svg" alt="menu" />
           <p class="text-white font-medium">Меню</p>
         </div>
       </div>
@@ -61,13 +120,13 @@
           class="flex gap-6 items-center justify-between px-10 pb-6 max-[768px]:px-4 max-[768px]:pb-2 rounded-b-[25px] mb-36 border-b border-b-[#FFFFFF33]"
         >
           <img
-            src="./assets/icons/logo.svg"
+            src="../assets/icons/logo.svg"
             alt="logo"
             class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
           />
           <div class="gap-2 flex">
             <div class="header_icon_wrap max-[768px]:hidden!">
-              <img src="./assets/icons/phone.svg" alt="phone" />
+              <img src="../assets/icons/phone.svg" alt="phone" />
             </div>
             <button
               class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
@@ -78,54 +137,123 @@
               class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23! burger-menu"
               id="closeMenuBtn"
             >
-              <img src="./assets/icons/close.svg" alt="menu" />
+              <img src="../assets/icons/close.svg" alt="menu" />
               <p class="text-white font-medium">Меню</p>
             </div>
           </div>
         </div>
-        <div class="px-5">
-          <a
-            href="./cargo_transportation.html"
-            class="flex items-center gap-1 justify-between mb-8"
-          >
-            <p
-              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
-            >
-              Грузоперевозки
-            </p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
-          </a>
-          <a
-            href="./road_transportation.html"
-            class="flex items-center gap-1 justify-between mb-8"
-          >
-            <p
-              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
-            >
-              Автоперевозки
-            </p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
-          </a>
-          <p
-            class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
-          >
-            Расчет стоимости
-          </p>
-          <a
-            href="/pricelist.html"
-            class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
-          >
-            Прайс-лист
-          </a>
-          <div class="hidden max-[768px]:flex gap-3">
+        <div class="px-5 menu-content">
+          <div class="menu-screen menu-main active">
             <button
-              class="bg-[#C83A36] h-10 w-40 rounded-xl text-white font-medium text-sm!"
+              type="button"
+              data-target="cargo"
+              class="flex items-center w-full gap-1 justify-between mb-8 menu-link"
             >
-              Заказать звонок
+              <p
+                class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >
+                Грузоперевозки
+              </p>
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="mt-1"
+              />
             </button>
-            <div class="header_icon_wrap w-10! h-10!">
-              <img src="./assets/icons/phone.svg" alt="phone" />
+            <button
+              data-target="road"
+              class="flex items-center w-full menu-link gap-1 justify-between mb-8"
+            >
+              <p
+                class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >
+                Автоперевозки
+              </p>
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="mt-1"
+              />
+            </button>
+            <p
+              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
+            >
+              Расчет стоимости
+            </p>
+            <a
+              href="./pricelist.html"
+              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
+            >
+              Прайс-лист
+            </a>
+            <div class="hidden max-[768px]:flex gap-3 mt-8">
+              <button
+                class="bg-[#C83A36] h-10 w-40 rounded-xl text-white font-medium text-sm!"
+              >
+                Заказать звонок
+              </button>
+              <div class="header_icon_wrap w-10! h-10!">
+                <img src="../assets/icons/phone.svg" alt="phone" />
+              </div>
             </div>
+          </div>
+          <div class="menu-screen menu-sub" data-menu="cargo">
+            <button class="menu-back">
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="rotate-90"
+              />
+              Меню / Грузоперевозки
+            </button>
+
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 5т</a
+            >
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 10т</a
+            >
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 15т</a
+            >
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 20т</a
+            >
+          </div>
+
+          <div class="menu-screen menu-sub" data-menu="road">
+            <button class="menu-back">
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="rotate-90"
+              />
+              Меню / Автоперевозки
+            </button>
+
+            <a
+              href="./road_transportation.html"
+              class="text-white block font-medium mb-8 text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Междугородние перевозки</a
+            >
+            <a
+              href="./road_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Международные перевозки</a
+            >
+            <a
+              href="./road_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Перевозка негабаритных грузов</a
+            >
           </div>
         </div>
       </div>
@@ -134,7 +262,7 @@
       class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
       <div class="flex gap-47 relative">
-        <div>
+        <div class="max-[1440px]:hidden">
           <div class="max-[1440px]:hidden sticky top-10">
             <h3 class="text-[#3A3A3A] mb-5 font-medium text-xl">Оглавление</h3>
 
@@ -181,22 +309,22 @@
             24.06.2025
           </p>
           <img
-            src="./assets/images/blog.png"
+            src="../assets/images/blog.png"
             alt="blog"
             class="max-[1440px]:hidden mb-15"
           />
           <img
-            src="./assets/images/blogTablet.png"
+            src="../assets/images/blogTablet.png"
             alt="blog"
             class="max-[1440px]:block hidden max-[1024px]:hidden mb-12"
           />
           <img
-            src="./assets/images/blogTablet2.png"
+            src="../assets/images/blogTablet2.png"
             alt="blog"
             class="hidden max-[1024px]:block max-[768px]:hidden mb-12"
           />
           <img
-            src="./assets/images/blogMobile.png"
+            src="../assets/images/blogMobile.png"
             alt="blog"
             class="hidden max-[768px]:block mb-8"
           />
@@ -299,22 +427,22 @@
             техники.
           </p>
           <img
-            src="./assets/images/blog.png"
+            src="../assets/images/blog.png"
             alt="blog"
             class="max-[1440px]:hidden mb-15"
           />
           <img
-            src="./assets/images/blogTablet.png"
+            src="../assets/images/blogTablet.png"
             alt="blog"
             class="max-[1440px]:block hidden max-[1024px]:hidden mb-12"
           />
           <img
-            src="./assets/images/blogTablet2.png"
+            src="../assets/images/blogTablet2.png"
             alt="blog"
             class="hidden max-[1024px]:block max-[768px]:hidden mb-12"
           />
           <img
-            src="./assets/images/blogMobile.png"
+            src="../assets/images/blogMobile.png"
             alt="blog"
             class="hidden max-[768px]:block mb-8"
           />
@@ -383,24 +511,24 @@
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
       >
         <a href="/">
-          <img src="./assets/icons/logo.svg" alt="logo" />
+          <img src="../assets/icons/logo.svg" alt="logo" />
         </a>
         <div class="flex gap-3">
           <a href="tel:+73832305676" class="footer_icon_wrap">
-            <img src="./assets/icons/phone.svg" alt="phone" />
+            <img src="../assets/icons/phone.svg" alt="phone" />
           </a>
           <a
             href="https://t.me/your_telegram"
             target="_blank"
             class="footer_icon_wrap"
           >
-            <img src="./assets/icons/telegram.svg" alt="text" />
+            <img src="../assets/icons/telegram.svg" alt="text" />
           </a>
           <div
             id="arrowUp"
             class="footer_icon_wrap bg-[#C83A36]! cursor-pointer"
           >
-            <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
+            <img src="../assets/icons/arrowUpWhite.svg" alt="arrow" />
           </div>
         </div>
       </div>
@@ -682,5 +810,5 @@
       </div>
     </footer>
   </body>
-  <script src="js/main.js" type="module"></script>
+  <script src="../js/main.js" type="module"></script>
 </html>
