--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,7 +16,7 @@
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
-        <a href="/">
+        <a href="/index.html">
           <img
             src="../assets/icons/logo.svg"
             alt="logo"
@@ -24,16 +24,73 @@
           />
         </a>
         <div class="flex gap-6 max-[1440px]:hidden">
-          <a href="./cargo_transportation.html" class="flex items-center gap-1">
-            <p class="text-white font-medium text-xl leading-[100%]">
-              Грузоперевозки
-            </p>
-            <img src="../assets/icons/chevron.svg" alt="chevron" />
-          </a>
-          <a href="./road_transportation.html" class="flex items-center gap-1">
-            <p class="header_title">Автоперевозки</p>
-            <img src="../assets/icons/chevron.svg" alt="chevron" />
-          </a>
+          <div class="dropdown">
+            <button
+              class="flex items-center gap-1 dropdown-trigger"
+              type="button"
+            >
+              <p class="text-white font-medium text-xl">Грузоперевозки</p>
+              <img src="../assets/icons/chevron.svg" alt="chevron" />
+            </button>
+            <div class="dropdown-menu">
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки фурами</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 1.5 тонны</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 3 тонны</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 5 тонн</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 10 тонн</a
+              >
+              <a
+                href="./cargo_transportation.html"
+                class="text-white font-medium text-xl"
+                >Грузоперевозки 20 тонн</a
+              >
+            </div>
+          </div>
+          <div class="dropdown">
+            <button
+              class="flex items-center gap-1 dropdown-trigger"
+              type="button"
+            >
+              <p class="header_title">Автоперевозки</p>
+              <img src="../assets/icons/chevron.svg" alt="chevron" />
+            </button>
+            <div class="dropdown-menu">
+              <a
+                href="./road_transportation.html"
+                class="text-white font-medium text-xl"
+                >Международные перевозки</a
+              >
+              <a
+                href="./road_transportation.html"
+                class="text-white font-medium text-xl"
+                >Междугородние перевозки</a
+              >
+              <a
+                href="./road_transportation.html"
+                class="text-white font-medium text-xl"
+                >Перевозка негабаритных грузов</a
+              >
+            </div>
+          </div>
           <p class="header_title">Расчет стоимости</p>
           <a href="./pricelist.html" class="header_title">Прайс-лист</a>
         </div>
@@ -82,49 +139,118 @@
             </div>
           </div>
         </div>
-        <div class="px-5">
-          <a
-            href="./cargo_transportation.html"
-            class="flex items-center gap-1 justify-between mb-8"
-          >
-            <p
-              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
-            >
-              Грузоперевозки
-            </p>
-            <img src="../assets/icons/chevron.svg" alt="chevron" class="mt-1" />
-          </a>
-          <a
-            href="./road_transportation.html"
-            class="flex items-center gap-1 justify-between mb-8"
-          >
-            <p
-              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
-            >
-              Автоперевозки
-            </p>
-            <img src="../assets/icons/chevron.svg" alt="chevron" class="mt-1" />
-          </a>
-          <p
-            class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
-          >
-            Расчет стоимости
-          </p>
-          <a
-            href="./pricelist.html"
-            class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
-          >
-            Прайс-лист
-          </a>
-          <div class="hidden max-[768px]:flex gap-3 mt-8">
+        <div class="px-5 menu-content">
+          <div class="menu-screen menu-main active">
             <button
-              class="bg-[#C83A36] h-10 w-40 rounded-xl text-white font-medium text-sm!"
+              type="button"
+              data-target="cargo"
+              class="flex items-center w-full gap-1 justify-between mb-8 menu-link"
             >
-              Заказать звонок
+              <p
+                class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >
+                Грузоперевозки
+              </p>
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="mt-1"
+              />
             </button>
-            <div class="header_icon_wrap w-10! h-10!">
-              <img src="../assets/icons/phone.svg" alt="phone" />
+            <button
+              data-target="road"
+              class="flex items-center w-full menu-link gap-1 justify-between mb-8"
+            >
+              <p
+                class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >
+                Автоперевозки
+              </p>
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="mt-1"
+              />
+            </button>
+            <p
+              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
+            >
+              Расчет стоимости
+            </p>
+            <a
+              href="./pricelist.html"
+              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
+            >
+              Прайс-лист
+            </a>
+            <div class="hidden max-[768px]:flex gap-3 mt-8">
+              <button
+                class="bg-[#C83A36] h-10 w-40 rounded-xl text-white font-medium text-sm!"
+              >
+                Заказать звонок
+              </button>
+              <div class="header_icon_wrap w-10! h-10!">
+                <img src="../assets/icons/phone.svg" alt="phone" />
+              </div>
             </div>
+          </div>
+          <div class="menu-screen menu-sub" data-menu="cargo">
+            <button class="menu-back">
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="rotate-90"
+              />
+              Меню / Грузоперевозки
+            </button>
+
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 5т</a
+            >
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 10т</a
+            >
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 15т</a
+            >
+            <a
+              href="./cargo_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Грузоперевозки 20т</a
+            >
+          </div>
+
+          <div class="menu-screen menu-sub" data-menu="road">
+            <button class="menu-back">
+              <img
+                src="../assets/icons/chevron.svg"
+                alt="chevron"
+                class="rotate-90"
+              />
+              Меню / Автоперевозки
+            </button>
+
+            <a
+              href="./road_transportation.html"
+              class="text-white block font-medium mb-8 text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Междугородние перевозки</a
+            >
+            <a
+              href="./road_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Международные перевозки</a
+            >
+            <a
+              href="./road_transportation.html"
+              class="text-white block mb-8 font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+              >Перевозка негабаритных грузов</a
+            >
           </div>
         </div>
       </div>
